--- a/railway.toml
+++ b/railway.toml
@@ -3,6 +3,6 @@ builder = "DOCKERFILE"
 dockerfilePath = "Dockerfile"
 
 [deploy]
-startCommand = "uvicorn main:app --host 0.0.0.0 --port $PORT"
+startCommand = "uvicorn main:app --host 0.0.0.0 --port 800"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
