Creacion endpoint Deactivate

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # Variables de entorno (contiene SECRET_KEY)
 .env
 
+# Base de datos SQLite
+#*.db
+#*.db-journal
+#*.sqlite
+#*.sqlite3
+
 # Python
 __pycache__/
 *.py[cod]
