--- a/sistema-asistencia-frontend/package.json
+++ b/sistema-asistencia-frontend/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@mdi/font": "^7.4.47",
     "@pinia/nuxt": "^0.11.3",
+    "@vueuse/nuxt": "^14.1.0",
     "bulma": "^1.0.4",
     "dayjs": "^1.11.19",
     "nuxt": "^4.2.1",
