--- a/sistema-asistencia-frontend/package.json
+++ b/sistema-asistencia-frontend/package.json
@@ -21,6 +21,7 @@
     "jspdf-autotable": "^5.0.2",
     "nuxt": "^4.2.1",
     "pinia": "^3.0.4",
+    "qrcode": "^1.5.4",
     "qrcode-vue3": "^1.7.1",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3"
